# agentic_patterns

./: .gitignore  pyproject.toml  sotu.txt  state_of_the_union.txt
modules/: ch14_knowledge_retrieval.py  ch1_prompt_chaining.py  ch2_routing.py  ch3_parallelization.py  ch4_reflection.py
